--- a/assets/style.css
+++ b/assets/style.css
@@ -1,283 +1,292 @@
   @media only screen and (min-width:500px) {
-      body {
-        min-width: 900px;
-        max-width: 900px;
-        margin: 0 auto;
-      }
-
-      .body_contents {
-        display: block;
-        overflow: hidden;
-        margin: 0 auto;
-      }
-
-      .left-content {
-        width: 580px;
-        float: left;
-        display: block;
-        margin-left: 0px;
-        margin-right: 7px;
-        margin-top: 2px;
-        overflow: hidden;
-        border-right: 1px solid #ddd;
-      }
-
-      .right-content {
-        float: left;
-        width: 311px;
-        display: block;
-        margin-top: 2px;
-        overflow: hidden;
-        border-left: 1px solid #ddd;
-      }
-    }
-
-    .download {
-      display: block;
-      text-align: center
-    }
-
-    #search-form,
-    #top-content,
-    .download,
-    .header,
-    .thumb {
-      text-align: center
-    }
-
-    html {
-      background: #ddd
-    }
-
     body {
-      webkit-box-shadow: 0 0 10px #000;
-      moz-box-shadow: 0 0 10px #000;
-      box-shadow: 0 0 10px #000;
-      font-family: "Trebuchet MS", Arial, Helvetica, SolaimanLipi, Siyam Rupali, Droid Sans, Segoe UI, Open Sans, Tahoma, Arialsans-serif;
-      max-width: 850px;
-      position: relative;
+      min-width: 900px;
+      max-width: 900px;
       margin: 0 auto;
-      background: #fff;
-      padding: 0;
-      color: #444;
-      font-size: 15px;
-      overflow-wrap: break-word
     }
 
-    body img {
-      max-width: 100%
-    }
-
-    a:active,
-    a:link {
-      color: #222;
-      text-decoration: none
-    }
-
-    a:hover {
-      color: red;
-      font-weight: 700
-    }
-
-    .header {
-      font-weight: 400
-    }
-
-    a:visited {
-      color: green
-    }
-
-    input {
-      padding: 5px 10px;
-      color: #000;
-      font-family: "Tabarra Black Shadow";
-      background-color: #fff;
-      border: 1px solid #eaeaea;
-      outline: 0;
-      margin: 3px
-    }
-
-    form input[type=text] {
-      width: 25%;
-      height: 20px;
-      font-family: "Tabarra Black Shadow";
-      border: 1px solid #ddd
-    }
-
-    h1 {
-      font-family: Oswald
-    }
-
-    input:focus {
-      border: 1px solid #eee
-    }
-
-    input[type=submit] {
-      background: repeat-x #222;
-      color: #fff;
-      padding: 7px;
-      width: 120px
-    }
-
-    input[type=submit]:hover {
-      cursor: pointer;
-      color: #fff
-    }
-
-    h1 {
-      font-size: 20px;
-      margin: 0
-    }
-
-    .header {
-      background-color: #333;
-      color: #fff;
-      border-width: 1px;
-      border-color: #333;
-      border-style: solid;
-      padding: 4px
-    }
-
-    .header h1 {
-      font-size: 26px
-    }
-
-    .title {
-      font-family: Renfrew
-    }
-
-    .main-menu {
-      font-family: "segoe ui", Arial, Helvetica, sans-serif
-    }
-
-    #top-content {
-      background: #eee;
-      border-bottom: 1px solid #dedede;
-      margin: 0;
-      padding: 6px
-    }
-
-    #search-form input {
-      border: 1px solid #ddd
-    }
-
-    #search-form {
-      margin: 5px 0;
-      padding: 0
-    }
-
-    #search-form .inp-text {
-      margin: 0 0 0 3px;
-      padding: 4px;
-      background: #fff;
-      width: 50%;
-      color: #333
-    }
-
-    .list {
-      border-bottom: 1px solid #eee
-    }
-
-    .main-menu {
-      font-size: 14px;
-      padding: 0;
-      background: #333;
+    .body_contents {
+      display: block;
+      overflow: hidden;
       margin: 0 auto;
-      height: 35px;
-      overflow: hidden
     }
 
-    .list {
-      background: #fff
+    .left-content {
+      width: 580px;
+      float: left;
+      display: block;
+      margin-left: 0px;
+      margin-right: 7px;
+      margin-top: 2px;
+      overflow: hidden;
+      border-right: 1px solid #ddd;
     }
 
-    .list {
-      padding: 6px;
-      font-family: "Trebuchet MS"
+    .right-content {
+      float: left;
+      width: 311px;
+      display: block;
+      margin-top: 2px;
+      overflow: hidden;
+      border-left: 1px solid #ddd;
     }
+  }
 
-    .list:before {
-      content: "› "
-    }
+  .download {
+    display: block;
+    text-align: center
+  }
 
-    .list:hover a {
-      transition: 0s
-    }
+  #search-form,
+  #top-content,
+  .download,
+  .header,
+  .thumb {
+    text-align: center
+  }
 
-    .thumb {
-      background: #fff;
-      border-bottom: 2px solid #eee;
-      padding: 5px;
-      color: #222
-    }
+  html {
+    background: #ddd
+  }
 
-    .thumb img {
-      border: 2px solid #ddd;
-      width: 100px;
-      height: 100px
-    }
+  body {
+    webkit-box-shadow: 0 0 10px #000;
+    moz-box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px #000;
+    font-family: "Trebuchet MS", Arial, Helvetica, SolaimanLipi, Siyam Rupali, Droid Sans, Segoe UI, Open Sans, Tahoma, Arialsans-serif;
+    max-width: 850px;
+    position: relative;
+    margin: 0 auto;
+    background: #fff;
+    padding: 0;
+    color: #444;
+    font-size: 15px;
+    overflow-wrap: break-word
+  }
 
-    .download {
-      padding: 6px;
-      background: #0573c1;
-      margin: 4px;
-      color: #fff;
-      font-weight: 700
-    }
+  body img {
+    max-width: 100%
+  }
 
-    .d,
-    .lines {
-      background: #fff;
-      border-bottom: 1px solid #eee
-    }
+  a:active,
+  a:link {
+    color: #222;
+    text-decoration: none
+  }
 
-    .lines {
-      padding: 5px;
-      color: #444
-    }
+  a:hover {
+    color: red;
+    font-weight: 700
+  }
 
-    .lines a {
-      color: #00f
-    }
+  .header {
+    font-weight: 400
+  }
 
-    .d:a,
-    .lines b {
-      color: #0563a4
-    }
+  a:visited {
+    color: green
+  }
 
-    .lines:before {
-      content: "» "
-    }
+  input {
+    padding: 5px 10px;
+    color: #000;
+    font-family: "Tabarra Black Shadow";
+    background-color: #fff;
+    border: 1px solid #eaeaea;
+    outline: 0;
+    margin: 3px
+  }
 
-    .footer,
-    .footer-menu {
-      background: #222;
-      padding: 10px;
-      text-align: center
-    }
+  form input[type=text] {
+    width: 25%;
+    height: 20px;
+    font-family: "Tabarra Black Shadow";
+    border: 1px solid #ddd
+  }
 
-    .d img {
-      border: 1px solid #ddd
-    }
+  h1 {
+    font-family: Oswald
+  }
 
-    .footer {
-      color: #fff;
-    }
+  input:focus {
+    border: 1px solid #eee
+  }
 
-    .footer-menu {
-      color: #fff
-    }
+  input[type=submit] {
+    background: repeat-x #222;
+    color: #fff;
+    padding: 7px;
+    width: 120px
+  }
 
-    .footer-menu span a {
-      background: #333;
-      color: #fff;
-      padding: 4px 4px 6px;
-      margin: 1px
-    }
+  input[type=submit]:hover {
+    cursor: pointer;
+    color: #fff
+  }
 
-    .footer-menu span:hover a {
-      background: #00bfff;
-      color: #fff;
-      transition: 1s;
-      border-radius: 20px
-    }
+  h1 {
+    font-size: 20px;
+    margin: 0
+  }
+
+  .header {
+    background-color: #333;
+    color: #fff;
+    border-width: 1px;
+    border-color: #333;
+    border-style: solid;
+    padding: 4px
+  }
+
+  .header h1 {
+    font-size: 26px
+  }
+
+  .title {
+    font-family: Renfrew
+  }
+
+  .main-menu {
+    font-family: "segoe ui", Arial, Helvetica, sans-serif
+  }
+
+  #top-content {
+    background: #eee;
+    border-bottom: 1px solid #dedede;
+    margin: 0;
+    padding: 6px
+  }
+
+  #search-form input {
+    border: 1px solid #ddd
+  }
+
+  #search-form {
+    margin: 5px 0;
+    padding: 0
+  }
+
+  #search-form .inp-text {
+    margin: 0 0 0 3px;
+    padding: 4px;
+    background: #fff;
+    width: 50%;
+    color: #333
+  }
+
+  .list {
+    border-bottom: 1px solid #eee
+  }
+
+  .main-menu {
+    font-size: 14px;
+    padding: 0;
+    background: #333;
+    margin: 0 auto;
+    height: 35px;
+    overflow: hidden
+  }
+
+  .list {
+    background: #fff
+  }
+
+  .list {
+    padding: 6px;
+    font-family: "Trebuchet MS"
+  }
+
+  .list:before {
+    content: "› "
+  }
+
+  .list:hover a {
+    transition: 0s
+  }
+
+  .thumb {
+    background: #fff;
+    border-bottom: 2px solid #eee;
+    padding: 5px;
+    color: #222
+  }
+
+  .thumb img {
+    border: 2px solid #ddd;
+    width: 100px;
+    height: 100px
+  }
+
+  .download {
+    padding: 6px;
+    background: #0573c1;
+    margin: 4px;
+    color: #fff;
+    font-weight: 700
+  }
+
+  .d,
+  .lines {
+    background: #fff;
+    border-bottom: 1px solid #eee;
+
+  }
+
+  .dd {
+    background: #fff;
+    border-bottom: 1px solid #eee;
+    padding-left: 5px;
+    padding-right: 5px;
+
+  }
+
+  .lines {
+    padding: 5px;
+    color: #444
+  }
+
+  .lines a {
+    color: #00f
+  }
+
+  .d:a,
+  .lines b {
+    color: #0563a4
+  }
+
+  .lines:before {
+    content: "» "
+  }
+
+  .footer,
+  .footer-menu {
+    background: #222;
+    padding: 10px;
+    text-align: center
+  }
+
+  .d img {
+    border: 1px solid #ddd
+  }
+
+  .footer {
+    color: #fff;
+  }
+
+  .footer-menu {
+    color: #fff
+  }
+
+  .footer-menu span a {
+    background: #333;
+    color: #fff;
+    padding: 4px 4px 6px;
+    margin: 1px
+  }
+
+  .footer-menu span:hover a {
+    background: #00bfff;
+    color: #fff;
+    transition: 1s;
+    border-radius: 20px
+  }
